<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/multiplayer_only"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/local_player_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDesign"
            android:onClick="connectionClick"
            android:text="@string/local_player"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/setup_padding">

            <Button
                android:id="@+id/blueTooth_player_bttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonDesign"
                android:onClick="connectionClick"
                android:text="@string/connect_bluetooth"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>