<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_player_setup"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_centerInParent="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GameFont"
            android:padding="@dimen/setup_padding"
            android:text="@string/player1_name"/>

        <EditText
            android:id="@+id/player1_name_txtb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:gravity="center"
            android:maxLength="10"
            style="@style/NameTextbox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GameFont"
            android:padding="@dimen/setup_padding"
            android:text="@string/player2_name"/>

        <EditText
            android:id="@+id/player2_name_txtb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:gravity="center"
            android:maxLength="10"
            style="@style/NameTextbox"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/setup_padding">

            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="doneClick"
                android:text="@string/done"/>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>