<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="35dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/player1_token_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                style="@style/GameFont"
                android:text="@string/x"/>

            <TextView
                android:id="@+id/player1_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/GameFont"
                android:text="@string/player_one_name"/>

            <TextView
                android:id="@+id/player1_score_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                style="@style/GameFont"
                android:text="@string/player_one_score"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/player2_token_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                style="@style/GameFont"
                android:text="@string/o"/>

            <TextView
                android:id="@+id/player2_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/GameFont"
                android:text="@string/player_two_name"/>

            <TextView
                android:id="@+id/player2_score_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                style="@style/GameFont"
                android:text="@string/player_two_score"/>

        </LinearLayout>

    </LinearLayout>

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"> -->
    <TableLayout
        android:id="@+id/gameboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_vertical|center_horizontal">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="1dp"
                android:layout_height="115dp"/>

            <Button
                android:id="@+id/button2"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"/>

            <Button
                android:id="@+id/button3"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button4"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="5dp"
                android:layout_height="115dp"/>

            <Button
                android:id="@+id/button5"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="5dp"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/button6"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"/>

            <Button
                android:id="@+id/button8"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"/>

            <Button
                android:id="@+id/button9"
                style="@style/BoardButton"
                android:onClick="gameBoardClick"
                android:text="@string/x"/>

        </TableRow>

    </TableLayout>

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/turn_player_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GameFont"
            android:text="@string/player_turn"/>

    </LinearLayout>

</LinearLayout>